--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header{
     text-align: center;
     padding: 2rem;
     box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.5);
-    background-color: var(--white);
+    background-color: var(--white);   
 }
 
 header a h1 {
@@ -135,7 +135,13 @@ header a h1 {
     background:var(--blue) ;
     color: var(--white);
 }
-
+a{
+    color: red;
+}
+i{
+    color: var(--blue);
+    text-decoration: blink;
+}
 footer {
     padding: 1.5rem;
     text-align: center;
